--- a/jaeger.yml
+++ b/jaeger.yml
@@ -1,4 +1,6 @@
-- hosts: webserver
+--- 
+- name: Jaeger Kurulumu
+  hosts: webserver
   become: true
   vars:
     ansible_python_interpreter: /usr/bin/python3
